--- a/kk-app/src/main/res/values/styles.xml
+++ b/kk-app/src/main/res/values/styles.xml
@@ -5,6 +5,6 @@
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsFloating">true</item>
-        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowFullscreen">false</item>
     </style>
 </resources>
